--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/LauraKaraliene/workflow-jest#readme",
   "devDependencies": {
     "eslint": "^8.57.0",
+    "eslint-plugin-jest": "^27.9.0",
     "jest": "^29.2.0"
   }
 }
