--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/LauraKaraliene/workflow-jest#readme",
   "devDependencies": {
+    "@babel/core": "^7.24.3",
+    "@babel/preset-env": "^7.24.3",
     "eslint": "^8.57.0",
     "eslint-plugin-jest": "^27.9.0",
     "jest": "^29.2.0"
