--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "devDependencies": {
     "@babel/core": "^7.24.3",
     "@babel/preset-env": "^7.24.3",
+    "cypress": "^13.7.1",
     "eslint": "^8.57.0",
+    "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-jest": "^27.9.0",
     "jest": "^29.2.0"
   }
