--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "learning jest",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test-unit",
-    "test-unit": "jest"
+    "test": "npm run test-unit && npm run test-e2e",
+    "test-unit": "jest",
+    "test-e2e": "cypress open"
   },
   "repository": {
     "type": "git",
